<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.InsertDataActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/activity_insertdata_nameEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/activity_insertdata_dateTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:textAlignment="center"
            android:background="?attr/editTextBackground"/>
        <EditText
            android:id="@+id/activity_insertdata_detailsEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detail"
            android:textAlignment="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/activity_insertdata_insertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_centerInParent="true"/>


</RelativeLayout>